<resources>
    <string name="app_name">Proyecto-Moviles</string>
    <string name="title_activity_login">DIACC</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirmPassword">Confirmar Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="register">Crear Cuenta</string>
    <string name="title_activity_register">Registrar</string>
    <string name="title_activity_projects">Lista de Proyectos</string>
    <string name="logout">Salir</string>
    <string name="createProject">Agregar Proyecto</string>
    <string name="projectName">Nombre del Proyecto</string>
    <string name="title_activity_project_details">Detalle de Proyecto</string>
    <string name="collaborators">Colaboradores</string>
    <string name="addCollaborator">Agregar Colaborador</string>
    <string name="title_activity_project_create">Crear Proyecto</string>
    <string name="title_activity_add_collaborator">Agregar Colaborador</string>
    <string name="editProjectName">Editar</string>
    <string name="name">Nombre</string>
    <string name="title_activity_user_profile">Perfil del Usuario</string>
    <string name="changePicture">Cambiar Foto</string>
    <string name="delete">Borrar</string>
    <string name="addEvaluation">Agregar Diagnostico</string>
    <string name="evaluations">Diagnosticos</string>
    <string name="title_activity_evaluation">Diagnostico</string>
    <string name="menuUsername">Perfil</string>
    <string name="title">DIACC</string>
    <string name="facebook_app_id">182148098799622</string>
</resources>
