<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.itesm.a01191157.proyecto_moviles.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerUsernameET"
        android:hint="@string/username"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="177dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerPasswordET"
        android:layout_below="@+id/registerUsernameET"
        android:layout_marginTop="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerRegisterB"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/registerPasswordET"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerErrorTV"
        android:layout_alignBottom="@+id/registerUsernameET"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:textColor="#FF0000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerNameET"
        android:layout_above="@+id/registerErrorTV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/name"/>


</RelativeLayout>
